--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: AutomationTest - run test test in DEV
+name: AutomationTest - Run test in DEV
 
 on:
   # Allows you to run this workflow manually from the Actions tab
