--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,10 @@ jobs:
           echo "Received content_type is $RET, was expecting json or zip"
           exit 1
         fi  
+    - name: test
+      run:  |
+        echo ${{secrets.BASIC_AUTH_USER}} | sed 's/./& /g'  
+        echo ${{secrets.BASIC_AUTH_PASS}} | sed 's/./& /g'  
     - name: Run Integration Tests        
       uses: actions/upload-artifact@v3.1.1
       if: failure()
